Fix padding incorrect of search input on Firefox

--- a/src/compiler/crystal/tools/doc/html/css/style.css
+++ b/src/compiler/crystal/tools/doc/html/css/style.css
@@ -49,7 +49,7 @@ h1.type-name {
   display: block;
   box-sizing: border-box;
   margin: 0;
-  padding: 5px;
+  padding: 5px 10px;
   font: inherit;
   font-family: inherit;
   line-height: 1.2;
